--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@
                 <button class="btn-backup" id="backupBtn" onclick="backupData()">💾 Copia de Seguridad</button>
                 <button class="btn-backup" id="restoreBtn" onclick="document.getElementById('restoreFile').click()">📂
                     Restaurar Copia</button>
-                <input type="file" id="restoreFile" accept=".txt" style="display: none;"
+                <input type="file" id="restoreFile" accept=".txt,.json" style="display: none;"
                     onchange="restoreBackup(event)">
             </div>
         </div>
