--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
                         <th>TOTAL</th>
                     </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="tableBody"></tbody>
                 <tfoot></tfoot>
             </table>
         </div>
