--- a/index.html
+++ b/index.html
@@ -132,24 +132,22 @@
 
         /* Botón Smart Sync (Nuevo) */
         .btn-smart-sync {
-            background: linear-gradient(135deg, #00c6ff 0%, #0072ff 100%);
+            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
             color: white;
-            width: clamp(40px, 10vw, 44px);
-            height: clamp(40px, 10vw, 44px);
+            width: clamp(36px, 9vw, 40px);
+            height: clamp(36px, 9vw, 40px);
             border-radius: 50%;
-            font-size: clamp(20px, 5.5vw, 22px);
-            padding: 0;
+            padding: 8px;
             gap: 0;
             display: flex;
             align-items: center;
             justify-content: center;
             flex: none;
-            font-weight: bold;
             min-height: unset;
             position: relative;
-            box-shadow: 0 4px 15px rgba(0, 114, 255, 0.4);
-            border: 2px solid rgba(255, 255, 255, 0.2);
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+            border: none;
+            transition: all 0.3s ease;
             cursor: pointer;
             z-index: 5;
         }
@@ -1265,9 +1263,13 @@
             <button class="btn btn-manual" onclick="showManual()" title="Ingresar donaciones manualmente">
                 <span>⌨️ Entrada Manual</span>
             </button>
-            <button class="btn-smart-sync" id="smartSyncBtn" onclick="smartSyncAction()"
-                title="Sincronización Inteligente / Reparar">
-                🔄
+            <button id="smartSyncBtn" class="btn btn-smart-sync" onclick="smartSyncAction()"
+                title="Sincronización Inteligente">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"
+                    style="width: 100%; height: 100%;">
+                    <path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.3" />
+                </svg>
             </button>
             <button class="btn btn-help" onclick="showInfo()" title="Ver guía de usuario">?</button>
             <button class="btn-save" id="saveBtn" onclick="manualSave()"
