chore: bump version to 2.2.0 to force cache update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker Donaciones Pocket Ants</title>
+    <title>Tracker Donaciones Pocket Ants v2.2</title>
     <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1292,9 +1292,9 @@
         </div>
 
         <!-- Footer info -->
+        <!-- Footer info -->
         <div class="footer-info">
-            <p>📱 Última actualización: <span id="lastUpdateTime">-</span></p>
-            <p>🔄 Última sincronización: <span id="lastSyncTime">Nunca</span></p>
+            <p>📱 v2.2.0 | Última actualización: <span id="lastUpdateTime">-</span></p>
             <p>🗓️ Semana iniciada: <span id="weekStartTime">-</span></p>
             <p id="admin-login-container" style="margin-top: 10px;"></p>
             <div id="backupButtons" style="display: none; margin-top: 10px;">
@@ -1305,6 +1305,8 @@
                     onchange="restoreBackup(event)">
             </div>
         </div>
+    </div>
+    </div>
     </div>
 
     <!-- Sección de entrada manual -->
