--- a/index.html
+++ b/index.html
@@ -3727,7 +3727,7 @@
         // Service Worker con Workbox
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./service-worker.js')
+                navigator.serviceWorker.register('./service-worker-v220.js')
                     .then(registration => {
                         console.log('Service Worker registrado con Workbox:', registration);
 
